# codename_bevjam

./: .gitignore  Cargo.toml  README.md
assets/graphics/: heart.aseprite  le_projectile.aseprite  mastahpiece.aseprite  potion.aseprite  shroom_axe.aseprite  shroom_guy.aseprite  spear.aseprite
assets/shaders/: creature_shader.wgsl
src/: background.rs  camera.rs  collision.rs  enemy.rs  fps.rs  game_ui.rs  main.rs  player.rs  player_controller.rs  potions.rs  projectile.rs  sounds.rs  start_menu.rs
src/creature/: creature_anim.rs  creature_assets.rs  creature_bundle.rs  creature_death.rs  creature_shader.rs  mod.rs
