[package]
name = "codename_bevjam"
version = "0.1.0"
authors = ["pieroluha <pieroluha@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin" 
codegen-units = 1
strip = "debuginfo"

[features]
default = [
    "bevy/bevy_winit",
    # "render" actually just includes:
    # (feel free to use just a subset of these, instead of "render")
    "bevy/bevy_render",        # Rendering framework core
    "bevy/bevy_core_pipeline", # Common rendering abstractions
    "bevy/bevy_sprite",        # 2D (sprites) rendering
    # "bevy/bevy_pbr",           # 3D (physically-based) rendering
    # "bevy/bevy_gltf",          # GLTF 3D assets format support
    "bevy/bevy_text",          # Text/font rendering
    "bevy/bevy_ui",            # UI toolkit
    "bevy/png",
    "bevy/x11",
    #
    "bevy_kira_audio/ogg",
    "bevy_kira_audio/wav",
]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_asset_loader = "0.16.0"
bevy_kira_audio = "0.15.0"
bevy_tweening = "0.7.0"
bevy_egui = "0.20.2"
bevy-inspector-egui = "0.18.3"
bevy_pkv = "0.7.0"
bevy_pancam = "0.8.0"
leafwing-input-manager = "0.9.1"
noisy_bevy = "0.3.0"
fastrand = "1.9.0"
pathfinding = "4.2.1"
image = "0.24.6"
